# skud_utility

./: .gitignore  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  preload.js  script.js  settings.json  vite.config.ts
.github/workflows/: build.yml
Settings/: settings.json
css/: style.css
docs/superpowers/specs/: 2026-07-21-tauri-rewrite-design.md
src/: App.tsx  api.ts  appInfo.ts  main.tsx  openExternal.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
src/components/: Icon.tsx  MainView.tsx  ProfileCard.tsx  ProfileGrid.tsx  SegmentedControl.tsx  SettingsRow.tsx  SettingsView.tsx  StatusBar.tsx
