[package]
name = "skud_utility"
version = "2.0.0"
description = "Утилита СКУД для ParsecNET"
authors = ["Daniil Mankus"]
license = "ISC"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "skud_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
