[package]
name = "kordon"
version = "2.0.0"
description = "Кордон — утилита СКУД для ParsecNET"
authors = ["Daniel Benovich"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kordon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
